# meridian

./: .databricksignore  .gitignore  CLAUDE.md  README.md  databricks.yml  pyproject.toml
.cursor/rules/: yeet-command.mdc
docs/: DEMO_SCRIPT.md  DEPLOYMENT.md  PRD.md
resources/: apps.yml  dashboards.yml  genie_spaces.yml  jobs.yml  pipelines.yml  shares.yml
scripts/: deploy.sh
src/app/: app.yaml  requirements.txt
src/app/backend/: cache.py  db.py  main.py  profiles.py
src/app/frontend/: index.html  package.json  tailwind.config.js
src/common/: config.py  schemas.py
src/dashboards/: internal_analytics.lvdash.json  platform_operations.lvdash.json  regulatory_landscape.lvdash.json  research_intelligence.lvdash.json
src/data_fetch/: fetch_arxiv.py  fetch_crossref.py  fetch_edgar.py  fetch_openfda.py  fetch_pubmed.py
src/data_gen/: generate_citations.py  generate_crm.py  generate_fda_actions.py  generate_financials.py  generate_patents.py  generate_pubmed.py  generate_sec_filings.py  generate_web_events.py
src/notebooks/: 00_setup.py  01_demo_walkthrough.py  02_delta_sharing.py  03_governance_tour.py  04_metric_views.py  05_system_tables.py  06_vector_search.py  07_create_genie_spaces.py  07_genie_enrichment.py  08_genie_enrichment.py  08_vs_sync.py  09_create_genie_spaces.py  09_vs_sync.py  10_abstract_enrichment.py
src/pipelines/internal/: bronze_crm.py  bronze_financials.py  bronze_web_events.py  gold_internal.py  silver_internal.py
src/pipelines/regulatory/: README.md  (+5 more)
tests/: conftest.py  test_data_gen.py  test_pipeline_expectations.py
(+29 files in other folders)
