[project]
name = "meridian-insights-demo"
version = "0.1.0"
description = "Meridian Insights — a Databricks demo showing end-to-end data product company on the Lakehouse"
requires-python = ">=3.11"
dependencies = [
    "databricks-sdk",
    "databricks-sql-connector",
    "faker",
    "requests",
    "fastapi",
    "uvicorn",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "pyspark",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
